# covid19_django

./: Data Science Summit.ipynb  manage.py  pyproject.toml
app/: admin.py  models.py  utils.py
covid19/: asgi.py  settings.py  urls.py  wsgi.py
